projects/site/src/examples/index.css
@import '@nvidia-elements/themes/fonts/inter.css';
@import '@nvidia-elements/themes/index.css';
@import '@nvidia-elements/themes/dark.css';
@import '@nvidia-elements/themes/high-contrast.css';
@import '@nvidia-elements/themes/compact.css';
@import '@nvidia-elements/themes/debug.css';
@import '@nvidia-elements/brand/index.css';
@import '@nvidia-elements/brand/dark.css';
@import '@nvidia-elements/styles/layout.css';
@import '@nvidia-elements/styles/labs/layout-viewport.css';
@import '@nvidia-elements/styles/labs/layout-container.css';
@import '@nvidia-elements/styles/typography.css';
@import '@nvidia-elements/styles/view-transitions.css';

*:not(:defined) {
  visibility: hidden;
}

#iframe-links {
  position: fixed;
  inset: auto 1rem 1rem auto;
  z-index: 1000;
}

/* this is a non flex container as flexbox influences the default sizing/behavior of components */
#example-container {
  scrollbar-color: var(--nve-sys-scrollbar-thumb-color) var(--nve-sys-scrollbar-track-color);
  scrollbar-width: var(--nve-sys-scrollbar-width);
  min-width: 100vw;
  min-height: 100vh;
  overflow-x: hidden;
}

/* center content when popovers are present to prevent iframe clipping */
#example-container:has([nve-popover]) {
  display: flex;
  align-items: center;
  justify-content: center;
}

body:has(#iframe-links:not([hidden])) #example-container {
  padding: var(--nve-ref-space-lg);
}

body:has(nve-page) #example-container {
  display: contents;
}

[data-element*='Responsive'] {
  & > [nve-layout] {
    height: 100%;
    width: 100%;
  }

  nve-card {
    min-width: 120px;
    min-height: 120px;
    --background: oklab(0.3344 -0.0439437 0.00222608);
  }

  &[data-element*='Viewport'] {
    nve-card {
      --background: oklab(0.2776 0.0214875 -0.0624042);
    }
  }
}

